--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "probot": "^10.0.0-beta.36"
+    "probot": "^10.0.1"
   },
   "devDependencies": {
     "jest": "^24.9.0",
