--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "probot": "^10.9.5"
   },
   "devDependencies": {
-    "jest": "^24.9.0",
+    "jest": "^25.0.0",
     "nock": "^12.0.0",
     "nodemon": "^2.0.6",
     "smee-client": "^1.1.0",
     "standard": "^14.3.1"
   },
   "engines": {
-    "node": ">= 8.3.0"
+    "node": "12"
   },
   "standard": {
     "env": [
