--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "nock": "^12.0.0",
     "nodemon": "^2.0.6",
     "smee-client": "^1.1.0",
-    "standard": "^14.3.1"
+    "standard": "^14.3.1",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "engines": {
     "node": "12"
