--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
   "dependencies": {
     "@vitalets/google-translate-api": "^5.0.0",
     "franc-min": "^5.0.0",
-    "probot": "^11.0.6"
+    "probot": "^11.1.0"
   },
   "devDependencies": {
     "jest": "^25.0.0",
     "nock": "^12.0.0",
     "nodemon": "^2.0.7",
-    "smee-client": "^1.1.0",
+    "smee-client": "^1.2.2",
     "standard": "^14.3.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
   "engines": {
-    "node": "12"
+    "node": ">=10.21"
   },
   "standard": {
     "env": [
