--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "probot": "^11.1.0"
   },
   "devDependencies": {
+    "got": "^9.6.0",
     "jest": "^25.0.0",
     "nock": "^12.0.0",
     "nodemon": "^2.0.7",
