--- a/.github/workflows/bot-wakup.yml
+++ b/.github/workflows/bot-wakup.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+          registry-url: https://registry.npmjs.org/
 
-      - name:
-
+      - name: Wake up bot
+        run: node src/glitch/wakup.js
