--- a/.github/workflows/bot-wakup.yml
+++ b/.github/workflows/bot-wakup.yml
@@ -2,10 +2,10 @@ name: Wake up Bot on Glitch
 
 on:
   schedule:
-    - cron: '0/2 * * * *'
+    - cron: '*/2 * * * *'
 
 jobs:
-  materials:
+  wakup:
     runs-on: ubuntu-latest
 
     strategy:
@@ -13,13 +13,15 @@ jobs:
         node-version: [11.x, 12.x]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: https://registry.npmjs.org/
 
       - name: Wake up bot
-        run: node src/glitch/wakup.js
+        run: |
+          npm ci
+          node src/glitch/wakup.js
