--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Run a multi-line script
         run: |
           npm ci
-          node src/glitch/wakeup.js
+          node /src/glitch/wakeup.js
