--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@
 
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -33,4 +33,4 @@ jobs:
       - name: Run a multi-line script
         run: |
           npm ci
-          node /src/glitch/wakeup.js
+          node src/glitch/wakeup.js
