--- a/.github/workflows/bot-wakup.yml
+++ b/.github/workflows/bot-wakup.yml
@@ -34,4 +34,4 @@ jobs:
         run: npm ci
 
       - name: Wake up bot
-        run: node src/glitch/wakeup.js
+        run: node src/glitch/wakeup.js --unhandled-rejections=strict
