--- a/.github/workflows/bot-wakup.yml
+++ b/.github/workflows/bot-wakup.yml
@@ -9,17 +9,13 @@ jobs:
   wakeup:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: ['12.x']
-
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16
           registry-url: https://registry.npmjs.org/
 
       - name: Cache node modules
