--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jest": "^25.0.0",
     "nock": "^12.0.0",
     "nodemon": "^2.0.7",
-    "smee-client": "^1.2.2",
+    "smee-client": "npm:@plainheart/smee-client@gosmee-pipelinesascode",
     "standard": "^14.3.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
