--- a/package.json
+++ b/package.json
@@ -21,23 +21,24 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "@plainheart/google-translate-api": "^1.1.0",
-    "bing-translate-api": "^2.2.0",
-    "franc-min": "^5.0.0",
-    "probot": "^12.0.0"
+    "@plainheart/google-translate-api": "^1.2.0",
+    "bing-translate-api": "^2.10.0",
+    "franc-min": "5.0.0",
+    "probot": "^12.3.3"
   },
   "devDependencies": {
-    "got": "^9.6.0",
-    "jest": "^25.0.0",
-    "nock": "^12.0.0",
-    "nodemon": "^2.0.7",
+    "@octokit/graphql": "^7.0.2",
+    "@octokit/graphql-schema": "^14.42.0",
+    "jest": "^29.7.0",
+    "nock": "^13.3.8",
+    "nodemon": "^3.0.1",
     "smee-client": "npm:@plainheart/smee-client@gosmee-pipelinesascode",
-    "standard": "^14.3.1",
-    "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
+    "standard": "^17.1.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "engines": {
-    "node": ">=10.21"
+    "node": ">=16"
   },
   "standard": {
     "env": [
