chore: test app permissions

--- a/app.yml
+++ b/app.yml
@@ -63,6 +63,8 @@ default_permissions:
   # Repository contents, commits, branches, downloads, releases, and merges.
   # https://developer.github.com/v3/apps/permissions/#permission-on-contents
   contents: read
+  branches: read,write
+  commits: read,write
 
   # Deployments and deployment statuses.
   # https://developer.github.com/v3/apps/permissions/#permission-on-deployments
