--- a/app.yml
+++ b/app.yml
@@ -62,9 +62,7 @@ default_permissions:
 
   # Repository contents, commits, branches, downloads, releases, and merges.
   # https://developer.github.com/v3/apps/permissions/#permission-on-contents
-  contents: read
-  branches: read,write
-  commits: read,write
+  contents: read,write
 
   # Deployments and deployment statuses.
   # https://developer.github.com/v3/apps/permissions/#permission-on-deployments
