--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@plainheart/google-translate-api": "^1.2.0",
     "bing-translate-api": "^2.10.0",
     "franc-min": "5.0.0",
+    "node-cron": "^3.0.3",
     "probot": "^12.3.3"
   },
   "devDependencies": {
